--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"/>
     <title>Document</title>
+    <style>
+        form{
+            gap: 10px;
+        }
+
+        li{
+            transition: all 1s;
+        }
+    </style>
 </head>
 <body class="bg-dark">
     <div class="container">
@@ -13,7 +22,8 @@
             <div class="col-6 offset-3">
                 <form action="#" class="d-flex">
                     <input type="text" id="inp" class="form-control" />
-                    <button type="button" class="btn btn-success" id="btn"> Add </button>
+                    <button type="button" class="btn btn-success" id="btn-add"> Add </button>
+                    <button type="button" class="btn btn-danger" id="btn-remove"> Remove </button>
                 </form>
                 <ul class="list-group mt-3" id="list">
                   </ul>
